Fix Menu Links overlap with iPhone notch in browser landscape mode

--- a/src/scss/02-layout/_menu-app-menu-links.scss
+++ b/src/scss/02-layout/_menu-app-menu-links.scss
@@ -127,15 +127,6 @@ body {
 
 // Responsive --------------------------------------------------------------------
 ///
-.landscape {
-	.layout-native {
-		.app-menu-links {
-			padding-left: calc(var(--os-safe-area-left) / 2);
-		}
-	}
-}
-
-///
 .desktop {
 	.layout:not(.layout-side) .app-menu-links {
 		display: flex;
@@ -152,6 +143,7 @@ body {
 		-webkit-overflow-scrolling: touch;
 		overflow-y: auto;
 		padding-top: var(--space-s);
+    padding-left: calc(var(--os-safe-area-left) / 2);
 
 		a {
 			// Service Studio preview
